Add Chameleon SVG change color depending on air quality

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 
 <body>
   <div class="container">
+    <object id="svg-object" data="images/chamaeleon.svg" type="image/svg+xml"></object>
     <form class="form">
-      <input type="text" name="city" value="Kraków" placeholder="Miasto">
+      <input type="text" name="city" value="" placeholder="Miasto">
       <input type="submit" class="form__button-search" value="Szukaj">
     </form>
     <div class="result"></div>
