--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+  <a href="https://www.map.airly.eu" target="_blank"><img src="./images/LogoBlue_airly.png" class="logo-airly"
+      alt="Airly logo"></a>
   <div class="container">
     <object id="svg-object" data="images/chamaeleon.svg" type="image/svg+xml"></object>
     <form class="form">
